fix updating tabs (need writable PortalPage) (#1239)
fix updating tabs (need writable PortalPage)
also intellij warning cleanups